k8s/prod/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - name: web
          image: leopoldox3/web-avatares:v1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
        #      imagePullSecrets:
        #        - name: my-registry-secret
        - name: prometheus-exporter
          image: prom/node-exporter:v1.8.2
          ports:
            - containerPort: 9101
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus
          resources:
            limits:
              memory: "64Mi"
              cpu: "250m"
            requests:
              memory: "32Mi"
              cpu: "125m"
      volumes:
        - name: prometheus-config
          configMap:
      restartPolicy: Always
