k8s/prod/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    io.kompose.service: web
  ports:
    - name: http  
      protocol: TCP
      port: 80
      targetPort: 5173
      nodePort: 32014
    - name: metrics-port
      protocol: TCP
      port: 9100
      targetPort: 9100
      nodePort: 32015
